Implement user login functionality in UserController and Added comparePassword method to user schema.
