# api.yaml
@@ -24,3 +24,16 @@ definitions:
       password: "Rohit@5053"
       profilePicture: "data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD/2wCEAAkGBwgHBgkIBwgKCgkLDRYPDQwMDRsUFRAWIB0iIiAdHx8kKDQsJCYxJx8fLT0tMTU3Ojo6Iys/RD84QzQ5OjcBCgoKDQwNGg8PGjclHyU3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3N//AABEIAJQA+QMBIgACEQEDEQH/xAAbAAADAAMBAQAAAAAAAAAAAAADBAUAAgYBB//EAEoQAAIBAgQDBQQGBgcHAwUAAAECAwQRAAUSITFBYRMiUXGBBhQykRUjQlKhsTNigsHR8BZDU1RykuEHJFWTlNLxlaKyFyU0NVb/xAAaAQACAwEBAAAAAAAAAAAAAAACAwEEBQAG/8QAMBEAAgIBBAAFAgUDBQAAAAAAAAECAxEEEiExBRMiQVFCYRQjMpHwgaHxM0NxsdH/2gAMAwEAAhEDEQA/AFxlebqt0GWMY10iaoDMXHC3EDz2wpS5Z7R/Aub0kCq20NOVVd/IbYpSR1RjVjAb24EhAOgBtjBl0FPTqrUkNOs3ekmjdQW32uS18K3e+DOjY19WX9kTqnJc9qo+1Gaw1Nj2bjtiRcbbb4W/ovnEEkriCFhGtwNWonqD/HFuPOKUIUo6WeRAxJWmiuB4cf34Rrc0aRWjEU1JexBaUhgvhYC3zxHYf4hx/U8L+5Piy3M8vkWziBQxbvxNIT/i2OHo4e2jZmgAgdrMpYgM3ibp44ZTM53ri3btDCD3VXYjp3rXxtJVFpNRr+3dnv2dTFsPUHx6YlQYi3XVZw2Ep6OjgLKlPp1Ea2srA+V8PS5XSsxlWFo2Niexbs9ugHrie+YyC590LMOLIxbbyxomawyNaXtEZt79nc/z8sNj8MxrbIyeY5LC0NNGQ0NTW0+obBZGPzBvfHs65hCAsNaJ1fYo8AJI6gfwwolejD/dkEjW+Bl0nz32ODxVlQpjZ444uIDsChHnvbDfTjBRlbzlr9xaOWaORoZKRU33elfUh84mFvljQxzRsZKKSNEI3i0Fo2/xId19LjHtfn9C0zU9XA/aRfC97kf4bWJ/HEiSWYA1OW5lHUKDcxzmxX9rl62wOEui1CVslnopSZnFQrHZTCrXLQEl4r/qta6+XDBKiOGtZc2oahKesVbHszqVx4MMRhmE8xK1dE8a/aeIar+Y+16Y8pqOOpqo/oerWGRxYGN7h/ME7W4kHe1zvhTrjLnBZTtkkt+1/uhmZ4a+QzRKYc0hBLrp7kgH54Vr81lradEu0RjIM2ru9ntvYeHXCctcZZhFUlKcKDHHUxppGoeIO4BwjVRVMcrz8HQ2dCbkX6c1OEvKeEi1TpFN5u/p/kJohqppDlmqEpsz9qbyemJEyS0k+wKlTuoJOk3PdP5jFahpjHVMWlFPFqCvGE1PvyHnyw1n2XPHGZoaZqVWsohmlHaTLzIXjcYDek8M06JuqWxvKNvZqsSd5aeo78UsVnptPxOOBU7kEcsUJTNkiyUrKlMj3ZKgQDtJBb4SeRxyNFO1NIrRM4qFbUjo3HFqozQywn3lJqyRwGkmZj3CNtxwB6jliZZ6Iv0snPMegL+8ZlMqIXZXeyT1Lm+nyOKEOS1c8Sw06vJK4OoAFI7X4ljx4YBHnNVBDCkVDd1XulkN5B95QcSa/wBrcwq5nDzzLFc6IwdNv53wlxsb4R0KrF9WEjq6HJJcnqopmr4kqwpISEjTbwN+OKeZQU0yity6eGbs+9UJ+kNOTfcAcuuPlD11TNvJIwHjf9+LXszXyZXmMVTRsGmMmhoSdpUPIjnhka5rvkXqNPXjf3L5Omps3p6qV8rapkMkraYXlIQBrfDtwB/O2I+czyQFlpcsReyBDTHvsRc3vfne9+uK3tXkUc2WrmWXU7xxTNquws0Ul/hPTriZQtNXZFJNGrpPCewrlKm1zsst+YPwt1APPAygkjqrEvzIL/lHPvXV80LBpwAu+gEC+J1RVVN1OtpdQsFJv+GOjh9kPdIJKvP8xjp7DUkMLB3fBMur4MuYy5bQx6mBvLN3tJ8bYNWRXSyaCk5LKJuS5NWZrAzOJYUtcSuO74WN8b1uSx0UrR1VQCSNhD3uHPCebZjX9qUkqT2bb6UNhv0wChqTCFqY5WaWNrMp3sPHBYn2EnJ9sep8hkqIe0pNMm17GQA4J9EVv/Dh/nGF5swyyQkywyiY/bV7C/l4YH9LU/3H/wCa2F/mCnGeeJHXR5jmEDv7rlwpEN9Ol9Tm/P59MKvmxGZLU1OWlnUHvzubcLb3Fjzw1HW0bN9bBVpIBcmBQ19r343t+OCwvltWSKfNJkfgUlitsemrb1xecEZLul7w4F48/ppVIWkgRQ27B7b/AJYOMwg0XKTgnhpJYDytjTNKTL6G+q4Gr43pALnhcENv54lPQUVROkdNm9WGb7CUepR66hbHPItaau1buhmqrkgF6Z0QMbDUtiPMcRhY11VIhmivI4+JYhfYdDj2kyGias7Seor5EN31e7r2ZtyvrO+LBqaZdIhhrI4wAocRqAvre3zOI2NjJVQT21x3C1NmM1NEJdJJZOEZsB5g4MvtOdBFRl6qi7oQCbee3D0w5S5KtS1qtagRcA7AWHkRuvrh1cip6FVdqwTqDdlkbSy8QN+Bt1t54LyvuVba9NHizGfsQ/ps1TM4kjI4fVm1vI8cM0f0vMNcaOaZTuxNj5Dx8hinNRZB2rEZdIJgoMkkcej5/wAeHXDkTChpu1oIpJIlW4jaX4b9PK+4JHXBqKj2Kfl/7dbf9Dk8wmo0iQ1vZxyNKYvdz8a7X1EfdxQgyWSpp+3AaNmt2bMtxztY8V/LDEJzGoqDUUdHTTV1SojKSxXDeBBJ5evDFGYV+WvBloqImYICzREyaG+0pYgD14cuuFyuhFbpD502bV5aw/uxSjy7M0eWNk0sG4PwIPOw/PA5/Z+ohnTM4aJHmgsWgIuGsb7/AHhthsV1YsLirk0yq2ltIPcJ4XFtvxvjepzivh0Aszi9jpsTuOVx8Pwnhtx8x/E1yWUJWl1NdnPBzXbCepeIUqU0dUjSAAqwQX4bi9t/PGqwTUU0MYZnmTema9xbmhPh4HHU5dW0tWEOaJTirZuz7WOI6Zidj67Xtz88M1seVVC9k0iqrDj16Hkef48iMGoxms+51l9lc8OLS/scpWyGsiWqp4hGyLbusbnfdSfEHhiG4pafTV1Mrys7XVdNyV53/LHUZtl02S1InY6qOchJpB8IN7B7Dh1wtW5VDQVkTVASSiqJAHDi4jk5N5H88InTllujUwgsPn4/8OYrI71naUotHL9dDty5jBaCokp3EtL2ZEqlHWYErv8AeW4vblfnjq86goXoZIaOyS0+6CNPwvjkGtrUgaY5u7sNw3X+fDHTi4Gjo9WtVB+nAWGauhJhE95I1utzz43GAAPW1DrUUkCzMbkjug/L+eOPZQ28gUF49nubbeOGYGmnaKKBQ1t4zzPiMRu+R7reMxMb2YkLBDT2LbgrJ/HG9J7NsaoKlDUT6RdrPYD1xeyrNaKngL5kZZqiLZKZD3W53LYFmPtFUV4EKgUlI39XF3Qo8b8TgZty4gUI2amE8WpYKWXZ4aWnbLTTs5gXVNC0mtXj+0D/ABxNqPaGfL9UEVPMuUtLeSnmU96Nvslv34BSSR5NVLUQgO4sHufjQ8fQjbDueSpARS6RVZfMizU5YbpGxsp81IKMOgPPAOt+4VFlTk9keyPmNLT1TyxIJHcC9Kw/rI+V+o4YlVFBIs4pl7de1P1akG5v4Y6ysoJaWCGNpFaBjroavle26tbhfhbCribNq+GQHsANILXH1My7WtzvhaclLjo0IelcLg5moyZVgmp5VmWupzdyV4J1GJlAaSkqEleYyWPej07OOePotHTNm2dzPLKIcwnUJeXuqzDYofMY4L2lyiTK6suEtC8hAH3GB3XFmDzxkYm4+xZlo6XM4QtLlzIspJhcsBboMTP6Nz/2U34Ya9lc9ZS+WVz2p6j9C+14Zfsm/IY6P3jOPGDEeqPAzZv5SOd+jaq5EdZd1HB00PgM9TUwN2dQi1Cjjr4jqG5Yox19HUfVvOI5vspLGQCLdeB/DG3u89YxjhFM2g3Ksyhuh9P5OLbjgx1KTlicQWU1E89QBUsWpxv3z2gA8/44v01HldawSJ1pagEAW+FvTCFFRpBHZ6aONtJEvZ328dW/7x54oj2cFRZ6WoYKu5jcAhdvS3/t/awShwJ2Rsm5ZxFD2XZNLHannrWgqXJZZD9oX8OfofTFuJ46CBy6rJKwsZIiN9+Y8dj0xy9XWZhlhipZdFQoH6OS5B8jYket/MY9y2aKplU0lT7tOd+wqbsG6Bxe/qWA32w6Kx2DXp7NYt0Xtg/j3L0NVJMjinUQQ3JQxcQOe3D5Y1iyhtfaLIL/AH0G/je3pyxvDI2tTmNOY5GNu2QgKOusCx9R6DFWEhgGV0mQGw2sQOo5+l/THNGlR4fVUuELx0hj0hkGk20gHVYX+Y4nGzUEc7jsiF7xJAXYm3Mc/PBuxDMHSazWsACR8xzOD6FHeLBUXduAPl/IxXsjwW1Svgh57QdqlM0rMsUTs07xX1AcBw3Iwjm2YQ0NClLkbivrGPcdSzLGDtdj446GVXmaRW0hV+Ingo8b45ytzrJsp76VVLLJ2gusTAtvsTbhe2G6fw+NyzZ0YeuuXnJVLc1+x7ltDPS0OmZWqZnbU832r8/TljEpKpFYpHq722nl5X/nfDNJ7T5b792QrKNo5gWTs3F06Ha1+mGp5qWRG93qFLIdbCI329f4f66EfDdO+FEpyv1v6pf9ER9SMI5O6R8F/DocNpItUhBAEh+MKeJ46un8fPfeoQdlDNURhop01bOCQOGoi23z62whXQfR8izQhjFwYH7Q/n+b2tTv8M2LdWyxRrVNqFi5C1DymEwTDtYrG4PEofiHy39MaRRGfKKzK5nR2plVI2I+ONiOze/Tx8sZUShwShBFtStaxb+eB9emFoagQVsbzfoRHYAixaBzZl/YJuPC/QYp1tv0yC1GnjGO6AhS1NRVU8UCMoqon7J0YkAnlv14YkwqrNVUjqVWZS8R4FW/8/njos2jjy7PYp2IMMp7Cocb2bbS3gORxH9oKSSkru0BGthqa3BmFw9uh4+owNkWWNHKMZce4jTTDuvKLyKdMigfFgla9qlhoVI33TRuPn47YFVMIKuCe66JrXsdgw/j+/DEVMxiiSSxWS5isQzadVh5eRwho1sg+yqJmN41LqN97Er4nGUkFOLGaU9je1iNWk49hlIbcurxkga1vq8x1GHpY4ZXhnoewjQxoKiMElVkI338NgenDliU8C7q1NYZvKDDTJPAyzxqbGMxnUw8L4oxrNX5bTxh0HZEtR6rBiCO/Ex8Ty8sR6hTEqvHFTmMG5EdUy+lj+7BaOqpOz7P3WtgdpFbXHULIqkcCRxNsFLDWUZarlRy1n9uiusXvGWinDsKSdxYOf0D+FuW+JdZTz5dWNBOxWWwDleduDDrwx0tQsWXTxZhaN8vriBOiklQ/M/q3/A2wpmVOtZVHLiXefUzUFSwsJBxMbdRwB6HCH2aFVmO+mDplkr4pMzZEaajKmdCfjHKQdPHE2velzYyU9T9WWk0zKv2X5OP1TgdJUSUc8lPVI23clivx6eRw3UxUlLVU2a0Gh6KRQsgtwU/EnmN7YJLksOPaOZ9p/YnMchgjq9PvFG+6zxi9h1wn/SrNP7Vflj6QueVGQKkNUjZlkcg1oqWftIjwI6jmMb/AEr/ALLv7rJ/0r/ww5ST9ilvuq9Mlk5uoCiJ46qgBDcCyh9vHxGJ8NHSmGRo5KhH2ERcXVSdvi/1x0ubLUSQGMQkTIQroWJKg+B4ld9uY5bYlR5bWpUKskitG26uikHbqDpPkwxbayUa5uMXueBqjgnjZjTypUKD8Eh0lR/PljoMqkpk1FiYJX4I+1/G3iPLEOnqUFUsZklUkWUOBJY28CAR+y2OhiqE91c1WiVb2YGMm5twIPPzJwyC9Quxt6V/LJ6vLNMzzLrUnZtrDpfh6ccH+haGoTUkRDi5bQbN6g8fUYWoBA8jGmkmp3He0xvcHpZgGt5WHU4s01iDqMTBdwyEofK1tIPlbzw/hmtpcRqSSwL09LmdIbUkq1EIFjFJzHMb7YoUlXRFGWppZKKW9rWsrenPBonN9JYEjirpYDp5dAcHkeN1McyhgV+GSxU2I9R+OAlEtKYWSKVe8gWoRV/qzcj+GF5NLK0iuqpazMx4DnbptjxezWRWpZmp5CD3X7wA8+Ixx3+0fP6mjphliGP3moQmaaPiE5D1wuMMy56Fai542Q7Zzftf7Xz5nLJRZe7RUAax07GU+J6Yg0dGJX1N43HhgFNEC17EjwHLFOE6bBRtjUo0zs9U+g9NRCuOEUqagowLNGDr39cPplCMAaOZ4JAvANsbHh+eEIGNxtwxUopCpFz3tVxbD50+Usx4HShHAXL6msEZy+eKKNxsZidz5DHRzstRRtDJ8GkaSRe3K2IctM0sUbtN2s8T3LAbi/I4rRu6hGF2EgtpLc/G9vTz354bGUbYbjzPiGkjVNSr49yLRSLOtNTUyS61L9ozm4O/AC3hfjj1pozodO/oJdbi2pDcOvqO8OoPhifX0izV7HVJHc7KshQX628cVPdhTQIkGohAHj8Su1h58VI6nHmtQttzwaNUPMqy/cHmwWsykK7bhvd5LDfUBeJr9RthFapKz2adpEHvNNIqvfc7Cx/A39BhmphETiBGK01YDApO+/GI+fAYmZfV9nmUi1akQ1d6erCgd1+B4/PAz+StXHHXsT40aWN6Nu7c93b7X2f4Y8SqJpGLFjPGwVWU2t9/8APljJqaWgnkheQh427N34nxQ7dLY0qFImSdowkdSBqVN9D23/efXFaSNeHKHZEkkiFR21tI67/zwvjd5ZVPvMEoSVgqyoftG1728LflhZKhT2sTxlIhcBEAPdtsd8ey0kkLXlkj7GRhpCyXNjxH7/O2F+4a57H54npZEleSnqI5fgBFw2JkpqI1Ea0tI8UneVlfTscOz00jztFpAhlA7IO47o5G/LrjRqG6NT5hTMSWJjKttfx25Hw8cTHgiUIvsFlVRPSk089PKKGa4mCOH0i1tQB4cRi9DO89JLQu7e8UzB4pNVzIg+FgfH92OVqcrqaKFKiqyzM6eEmxcNx8vDD+U1sUwSOkqKlcxpe/T+8lR2i/2Z8bDceZwbinyBtTWC9nTtnKJU9iEzSJPr0Ud2VF+2D+eJNJVtDEzhdcElu1ibh5j9YDFmjnSomhnjrIlWqNoopLqyvbfS/BW6HjiNX0AoHepSdXgMrI0Z7skZ/WXgLYUuyapfSytl6JLSJliShUeQtRu3BWI/Rt4A8sJ3m/uj/5cJUobXIYbX06ijHuvbf5/dPLBfplfCv+af8AbicyXRLSR0mW1JKvDJTFKmOwUWIY+H8/hglaErIwwUh493IPZsbcSbcCOF+HjbAcuy2nn7GRa4ymaMae3QCRrcgb6WtuCNj4HD8ayUwKyr71TX4hyHjYfdc7qeh+eNCDMXU1OPRLalili1qSYxs6yqFZOhH78VctoNGkUc8qMy/o2kJ42+yeXl44ydRqWNJSobhcGN7+QFgfIaT4YDk9VHRVrwvIFV2+0NN/Re4T5acO4KlMnOMq2Ky01ZBUulVBFIt7llexAvztwxTo541VOylnQDizqGU/tA2t64frKI1JWpimKBfsStdCfEAgj5AnrjIUeVjJ2UUsi7ahYm3K5N349Rg84Rp6PUZhsl2gtMAYro8BHElX3v5G1/xwOvrVy6SEVMFT2Mhs0lrBTxtduZwwKMFryRzJLxckggf5tR/HAZIool0GWRQ9weWu/Ii5v+HDCbJZXDL6ZGhzaObNRG8qdloeTQGv2agXsTj5hmddJmeaVFVI1zK5t0XkPlj6NnlOlFkeZzU0cCzPHpLiHQTfj44+Y066nHC3jh2nhKEYqT7Yqlxsuk/jgfiUMoGnfphiOC5BbbGkUbgXAHzw3Crk2a2PR14WDUUeBmmRdtxbxOKVOAu+qOwO++EY4wdiOG3DDlLSpFMHZQVHBr2Kn9+AtUJvDYM8KOSleFAwQBXkIuVHxdcOQ8gwA1CxAO1rfnzwuyIkSkKmw7pU8B4Y0ep7KmYgGyC67bjwwMYKuGEeU8Q1Urp7cE6c+8VrSGxEh73RueHkmZioksum+52vf4r+Tb3/AFxhGiiNt1u1y1ivO++Dyxq1RHErnvtbjwFrNfpwPpjys35lzZswiqdOm/YbzGk979nY3UhZFB717C67i3pfHIVxWWBa0ABaphHJY/BMo+Lpffz3x9CrS3ucsJQJ3BIqKfhKcRbqL44OZ7STxL/+JWDUkbGxBHwnz5X8/HBWrCMvS2KTygGZSRVNPSVJA1Ffd6kA2sw+E4FTxPWUzwvtIh1MWbgdhe3p+ONI7FWWo3WQdnKuq3e5N0AxvpenVpteqSGTs6gqdmG2lgfA88VZGtCWODWKaNqcpOxWWK+kgbdQfTBKXRP20M2tmJDxyn4VHl8sa5jCmrtqYJpZQTo8D4+JB44GD9iAsEewXU/xHa/47jEFhMNTv294NKh91B6/d6XxtPO0saIxPawiysTuwvYr6YWmeZJ2+rKum8nevqtzw5LO9VGs4CB4tioj3PDveXj1GBwGhmlqUqomNTnU9JoQae7rV/PwxpVNUp2dTS5rltbJqFiV7ORbDmPHl6YBXHtYPfFjRU2WZUGnQ1rcOYOEKiHIhTqpizGCfmySo8Z28DYg3344NASWHlHRzLC8CzVNPEKKra06BgVhnA2YEHgcS562kgYUdbTVUEynQ0sh1KwBN+PEc8Ay5qGjDpFmfb0lSqpUU9QhjPRlbcXXjilmdHmCyCCkqD79SDTGwe/bwcjfxH5YhpMBr6hOphekn7MXJUAoVbuup37p8fyxV/pjW/fH/TLiQlPm5phFUUbMFYiMooDB7X3txGFveq3+xf8AyNjtrD9EuWdpmVDURTqURoXY6liniaO9+Y1AC3qMVMuzFjJGtdMkUxGjUBZbg8H/ACF9t8by53JSoKXMo62AMx0uIgVY9Swtv4jSfPAKnKKCpn96pnkiZV+BQsqcOe23PY8b8cWF2VJxaWH0V2jp5O7MgikF9L2JS/TmvpcDnbEbOaSeOPtX5L3ZStr/ALYuD+1bzwWgzKejk90mkSSJz3RJwNvAte3QXNuRGKJtKLUheEt8Ud7Efssbb+Ox6nD4yyYl0Nkt0AeQ5o0sIgqLBrW+tOkkdb7H0OPMxpTR1AkA0RMe66s23nsRiLXKMtqkaamEQLFtKKUv+z8J+R88dHlUtHmNK8TMUB22GnSePUX/AAwf2Dy/9SHZtR5g0gvHIJ1G28etT6pf8sMSZjSMbFoNXEqCAeZ+15eGEZIamlqu9VTMNVkkmRXuvQixwwXk0MTNSzlOI0sCemKN2YM1dPqFZHJOqjHL20NRDO8TDS2lNztva22PmWbZd9G1l0imFK7HsWkUjbwJx9Er4oHqFL5dD9Z9qFlHTc+OCfRVDPRtTz0LFD8KSSd38CN+uN7S7bdNH5K1d3lXyz7s4ESRBIQLMZBcaDfT0bwODNM67hPW2/yxdb2JnpCaigaJlb4YZdyOgI54C9NUwSmCpy2p1bBeytZh/DfDozsSxnJtQvjJcMQlaWjhiqK9ZIoJwTC1heS3MLe9uV7WxUplV4QRc6gCF8b4Ti9mJFqlepWURLYr27AeS33P5Y6Hs4IHDpVvKUHeSmXQBcfe5j88DBWylmSAnfGCeWeR0zRookIQ2+Gx1flhXNGEawxI5Vn7x4MSoHh4bjfDFRWx0qxuIF7BH+sTXuVB4XHAeQxzGfZpNm2aVGZMFpwp7ixCwjAGwFue+5wGu1bpjtRgVaf8TqN3sWKYhTpu0TMbAPtr/fg1Mie/+8VBCKAbMtyqk+OEKd/eaBGkYtqUfVrYC1uFrb+uKeSx2QurOFUad7Een+vpjCql6smj4m1HT4QxVuxAN1MZBBYbqR92/XHJV8Qu8JTSY7PFuSADxHXx+WOjrpICYlOqmeTnGos54cOB9RfEutgmarMzQagij6yFdiL8LceG3pixOSkYulTj0Q3iZmDrEChBEqjix42HpuPXGqzMCJncOaeJY2Qj9JETZSOov+HTD8lFpkcRSHRINmDWIPI+l9+hwhLRzUzqSAHV2CBdyrKO9GfnceN8VpI2q5po9ijHae7I/aAjVTnV8XS/jy352wvFIYZHjDOsMmpU7RRcgGx9QcEmjZY1tqCMbwstrq3Nb8R/4wvVq0pM7kCUPpnBS1jwBH7+uF4LMZDZjcO1pF7RdrE3Di29jgkKSUEcdVTurhnKNGt2t5nqOGFoTBVUbljaoiPdIPxIOAA8f3Y1p5EjYO5DRvs6KOXS/mbYgamOMoo5YapdNTBMBeIG5N+Kn9bC1WsMFRIsaxz07X7K6k3U8B5jDMMaoTFO8jUr/WR2NiR95fAjn4+mDw1fu89RQVcyzQT2kWWKxAdh3XueAPO3XEZD7OcQ0cT6KmlYnVchXtt4bYsx1NPXafcWljlpYbKHcHVGOV+duGByvSUsskNfldPVNGba0YxtbxBGx+WEKV8pjkLNHXLIBZTFMvcPjvywfaAzhm7xtTwCenrXjldiNJuoUW8euPPpDNv+IL/zB/DBH7CelMyMXb4Z102IP3hhf3WP+8x/LBEOPwXsr/2gV4jjp6208YNjexuB0O2Omy3O8rzKVZKWcw1DXDRo9tv8JI/BvTEyl9uKDM0aLPaKnndti08CSsf2tm/HCByf2ar5XYNUUZ30pAwdVPiA29vngsnYO5g92qxJGYndyup2hBXT1O2/qPXCtRE9HYrN2ifCqyN2XE8Axut+gYY56hoczopI0os4pqtCf0Mt4nsOGnVz8rYpp7TzUdbIuYJOBEpV3mjEoHQsve/EjBxkZ+p025ZQ1XZl2K2qg8EYuL1kZVL9HsVPrfAKbNaeBWIQRoBqZoWHDzHdHnthuhzbKcwbVTyPT7XIopAUF/FdvxU4HNl1DPM8iyUBm1CxMYSQ9QU02477YZky1Hy3zk6WjraXOaQBZSm3dVtLEHxDGy+tzhOqoa2mDBxqXcCR1Wx28VOOSqKefL5meKkc7tZkIYfOwP44dy32jYKIMzpJZEAvdZZCPkS1sBPEuGHHcvXX2V6mNJkZyItzYqrkWvz47YCzT0pKm7LY6VZyQvnvwwOWr1xdrl6SMoH6N5S35i2FzUI6DVCqAbm+5B5bW/HpitXfdppejovQ8vVx57RUhzYxoVJRZDwKhnK34XHLbxtjSXMxMXR6ssb/AGEsQOn+uI0igLpiU93fUtiCfzwuS5UhCltQY3Fxt0xq1eMUPmawwZaLUQ/TyPzVEckoDBzIvHjsQOv5YmVTtI7u76UJ2K942Hhv+W2N5I6tlsZywOxYAE+mNY6aKFtUp1NuSWa7ceQ678eIwVvjcEvykFDQ3Tf5jwhUwyVUbxummEgnSONup5nE76F7eV0FTKsKvpI1bWtxN+AP4nHQ9sEDiOMNYd47bDwAOw/DAVlRkZIKftyW1MFACg28TtbxAB354xrNRO6e6RpQrr08cLg9V4YYUAYEX0Rsh7t+jHZvIXOKVPPHSfUVMsdNNINomUmQjogBZr7fZHnid7zSUpMlRVKtQw0rSUOoznbYGQ3YDf7NsEfNp4IiMroYcpTQGLOt5ZVAF7he8R5tz4YKPBlaqz8RJJdI3rmkWWQz/wC5gDZqv6trW3IjF2+ZxDFYsMzH/eCzm4Z27JWIBsQDY+gvhNq5FUU7TyMVteKSRtJN7/ApuR5nHjVFUymZaaZE0aHkVhBffcarFsHuBrowuSmF7YhpoWhA27SKErx5lnKj54Wr6ynp6Zkmq6JjKQdVNOshVgQQWUcLDUNjzA5YQdpJJfeIMqjOmxJmRpW6Fi3HDUOcZvTzX94lpQxDhYVijuOhtcccduZYhXg2m93lWMwyxCFlBleBu6rXsHI+z4nAq2nqEqJnmjUzQ92UGxEm3xDx236jfDZnoKiNveTS9u43qJ8xYuDz7oW3XCFVWQ0MtM9Jm9NVOAsf1IZQqA30EHivQYgdEQMpV1dEVXvdDa2/hhwmGdRVe7kRkhahBJazG5vbiBtx8RjyeSkqa4e6MsNPLIAdzphJPE35D8sb3ly6vnglTXJYpMqts+9jYjY8AcQ1xwWFIZgkgigNJXNJ2Uv1kE8a6ip5W6eOG4KSkMc9HmX1MhJaGQqQQxGx/wAB28tsTFMBjeEyFqZmLRMRuj8+VyOmD0BkmaPLquV0ABFI9+6lzvc80IvbAYwGmDMReZ8vriRPHtBIx2B+6ehxDny+eV3EMLGW51xmwKkccdOkCV8bZRWWp8ypSTDI3wyqNypPG/gcT3C5nDaNW9/XeTSBpntzsAO9+eJjJpktZJlJFmuVvHVtl1R7tKLMrRHTMnNTtwxe91yD/hGc/wCWT+GOZqWlg3DNpIOxJGnp0wH6Qqf7xP8A81v44PsFSaHyaNleKSKHtNVgzAqQfMccUMtpqSJ1dBURqu7XtNGdtthZvzwkMqW15NVhYFi6j+Tgs2XQQDtA+ncXtML39MMxk5fceFZKhA1BeA067gX6P+7DGX5i+XJLUwIrsRY1MTadvBuIOEoqmWnCu0EjxPewlcsp38v5tjyWtpWYRtRBZf6xeya7eGwscBLghvJfauymqeMZhS0JcoCXaFoJDzv2iYpUlMjp2dBV5lDHbZYpI62MjyvqxyYzpqd1jplqoyoPcL2t6NjZPaJi8bOgc7kF6eFj+GO3Mp3VuXR0c8LU4IOc0g0bfX5fUUx+YBwGKOrlIVM1y0xH7MNerEekljifD7XwCCxrTCRsqJAQD48GwOX2mpJnvJXRy3FrNR3v0xO4qSon8HYZfmWZU8McchgUaN+4hBHobnBT2dYHkqKtoVsDItNCFvfh1PDkDj5wtbDUBewiMkj8BHSjfyweLLcxtqFA8X3WeNU363wMmnwxT0rXq3YZ3NTB2DKrRSPpF7E6bD1s3PkMTqnNqKLSsskEDWsY2UuwBtyNmvseCnjiXDRVxURVGYKit/Ve8Mb9AqmxPpinlORUfbKJIKifcljpCLbxtfVbocVpUos162dSxLkSnzhJ2K00UspbfU5C2A8VAv6kYHD7xUs6O6WFtSxDUAP2bjh4k8eG+Ongo6RYpkjpx2hBtGkQN7cLgCw87YFLV0sjLRz66icsGNJFeRnIFu8oPDfiSB0x0a8dIN6+yT9McEqLTI6x0FO1bMi9437sbfrMbItvMYEdEEJ+lsyaQa+9HTnsobjexlPec9EX1xbzSapgo1Gc1VLkFKhDLGUVqk/4VXur8j54hU/tDS09Rb2dydTUEXOY5y/aPufiAPDDFHACdtizIYggr6uNEyTK6fLYdV/fKljCrX8Nd3bEerqMrinRK7NKjMJL/WQ0S6I1BvtqG5N9jvzxrOcwz6UTVlVU5roNmjiusKG/AngOONwtDStIs1dDRxkgdlQgyTtYA21HYb8sE2TChJk+MZi4OijpMuhUEl5WWEL5k94+gOCU0McsdlzqeqmjUMtJSUruSSdxrOwNzxscM+6CeR56TJKiWRd/eMxl7QDfiV/1ON54aqLLY3rs4ipYZyyrBSnRsp3LabahvYX8cdkdwuAFTEQWH0VmSzEoAamqIHHfVawv0wJ0lTUfo6jiKMQSZCTseZvjKOjhksctp62uAe4ZVbRfz2F8NNllVTSSCSlo6Uhl1e+zBmubcgf388c2MURbtXi4z5elxsxgDG/pflg39I80jbs4s00pfSTDSDh4C9uWGapUEI96z7LEJvohhpSwA4HoPPCYWmVdL56ViCixghIvy5Dw545MJR+DJ6yirpQ2a1Gd1MqbRtBDEm3lvjX3HOJFStjy2qalgACSTRqDpXxXbUOHAYwnKVU9rmWbT6ASFjUAKP2jhV6j2XLl5qXNJTYAF5Y/4+N8Eg9rPKieL3pqiOM9k36eGI20n9UHw8MNxwiJ4aSucx08ylqOrFrC/Aa/uE/I4WOY+ysaaY8trwyjYitHH5fhgKS1c1Oab6Nq5YLlo1ELdwnnsN+vjtiXySilC8qTpl9WjQ5nFJenmbvdo17hGPjwseBw0Q+cROexWnzqkchwO6Zzf/5ix88IUlMM2X3GtaeOtS3ussx02twRr7g+BwWijnzQtTTswzmnJ7KVmA7RV20kn7Y5HnzwOA4yYHMI1zeB6ylpgjxWFVEGW1/vKNievHEH3WPp88dUK6SumauoilDndOCsqRi3vAtY2HMn7S48/pZB/wDzWVf5mxHKDymI1eTJJCXim7y/CNSlWbwBGwHDjgcWTVTUhk7Bma4A678fLhhiqejSeOaGEwlzZxq7pseYwxV11LLNqEjRdmRdUjspAI424jGhzF8oDhilPTmKnEdXNGh3GmVHFvMgb/zw4YbjmqE0imqKeUK107OtKlDwvZlvgdWtM0hMGZpGpOpICzNq8sU4s2ysxCCSnhEoFg6TlXTxG43xWmk3knBJkrJ2qOzWaonMgBISVGuQbgHUMOt9I1Qsk8x7EXYFoUEYPPcjbrywWKoy5mcpl8FXyUPU2PyC74UOaZb2hMuVZbGVJAu5Fj8sLYMo8DFPBUxnv11PFq7zM89PtY+Z/LDvvshnVDnocHZpErYERBx321W25DElc8y6OV5RQZKBtpQhmwaL2qGoJRQZaJn5U+X9o3kL3wOGV5VlKepoJDJfNogptpC1csptwt3Ixc+uCQUMesyRw1lToS5PuzIEBI3Lzvp/A4kL7UZpUSaaSSqJYFxpgihBUcSDYYK7U80AqKrM4J5HsQjmSoe9/A7YhiXXkqPX06QCMtSROp3SMNVSqOqppT/zgJnq5Y/eY8skjhdgizVk3ZxhuqJa/kcAmzmGjpvcstp4Vh4yTVzadQ6Ktjx5HEmaokz2q90jeozWZdoqemTs4EHl/HAkKn2Kk1TQQoBmmbSVs97ChyvujyLA2/H0wSpz/N4qeKCjhpfZzL6q+nswGmdRsWLcRx4m1zhN6WjoKdI81zWnpAdmo8vTVN5FsUKKg1TpNBkGmCJT2NXnc2lY0vf4efEnHZ+Biox/P4hCLKamsnnny6hqK2KPutmlXUBI9XNtT7aR044do4aZp4qKCik9qMzjGpkhFqSInqRd+PFjbywSqqKSvrnSWSs9qa1Qfqab6qkjtwv0GMzGWT3Fos9zqHKacG65RlABZt/tEcdyOJxwxVpAcykiV2HtR7QwUpRdstyxO1kAHBC6jQnrhCmgr8wkWX2ZyB6ansVaoqJddwftM7begxvBHAKVU9nchWnhlOj6QzNgxYjwHAYH2GWS1qH2iz2WsvewjYiOJQDy5bi22IyiW4rg9zCqhtUfTHtUa2QlV92yuE2cA7fWMAoHzxQoaGSSJKjJfZNooVUlKvMpBJy3YltgOfdGBy+0GTrD7j7L5AZ53iZWkZDqU8m3HhviHqqoqJIc6z+QUrsS9HTyanJO5B5C/wAsSllEJN84wHqc599DpnHtFKET4Y6OIlXPQ7W9RgawfSYR8myGsncoF7eqcaQw4kn4T64NQZYxYT5flgghS6rUVzBQSeF7/wAMOVEGUUEzLnubTVsoUsIKVrJwGkepJ8hiW0uA1j5Ji0MsNkzHOMoo9G5ijvUSX8LRqQT64JHTZLJIAy51mkznbQqU0Z6Ad5vywhNmAWfRS0aQKm9g2o388BjqKh5lmaueOUH4tRXytb1xyyGkUJ5MtppT2WQ+KaJ6yRwx62IwWOtZE/8At+QZVTKmxMkSyMP2pGJxISlW1xKrNxNlLYbpWjp4ZpZgHDKYlbsxZCePHnbBhJFaH2iz6wEFXl1ILWuBFGR/lBwaStzyrYLL7Y5ei6d+2q3Qfgn82xCiOTKOzlebUd9TzBfyxv2uSxxkxLJK5NiVlNluPLzxOUTgakyeOacNV+1uVtMT8SmeT11CPE7MlSKb/wDaQ1rGxM0CSIQwPHvKN8FFXksbMr5Y0hUC6tVEfuwwM39mI1UH2e1sdyzVzWJ+XPHZZDDVTjNKdKuCqjeup7M/YoVeS32itrAj8fHDv9I6r++5J/6e3/biNPm2SyIxpckWjmP6OaOubu+lsTff3/th/nXEKP2O4KdBCs9YaeS5R4DIfEEC4thKCeSKpTSePe38cZjMacnwKSOny2seTL4qOSOB6YNfsmiUi/jjqMnyTJ86hZazKaUDj9SGjN7+INx6Y8xmM6z9Q/6Tyt9gMngpK6rglrIzEoMcYlBVdhzILfM43rcmo4PZvtwrNUUsPbQzM3eRjt67eN8eYzCm+CfY4/P/AGizLJ89qaWilQRKxVdcauVA5AkYdy3M81zelVarNKlY9IJjhCIDbyXGYzANvAto2zIdjl6RlnlCEBO1ctpvvsL2/DCEdMajMosqeolWmbvto0qxIA5gdcZjMcmwX2Uq/IcryDLJcwWkWvnRu4K5i6jfwBAPrfHa+zuRJnmRpW11fWqjQpKaWndYItwDbuKGt6364zGYgJcHzzNc/lyOVoMloqKjeRgjVCRl5SL/AH3LHBWy6KpozmOYST1s7MpPvEpK7nwFhjMZg0VbJPckJ5nUSzHL8vhb3SnkDl1pho1WI44XonXKs21UsMRkiclZJF1tcAkceoxmMxMuiV3gF7SZjU1ylql9RQF9trknmBtgXsVl0Ge+0UFBWl1p2jJYREKTbe18ZjMTHotQQ3nmZ1FBLWZbl+iko4ZtAigBXX1ZviY+Zx2c2U5f7MZDSZlQ0cU1bOYdU1UNZGsgGw2A+WMxmOfYm1vekfMszzzM80qnlrayWQs/w32A6DClF/vNZFTvsjNa44j548xmJ9hqikfX6D/ZxkS5EtdK9ZNKxQaXmAUXP6oGNKbKclWB2+haQlGsLtJbj4a+mMxmFJ5XIaOezHPRRxU5o8nyiF3iDs4pdRJP+InE+L2wzFlINNlm8n9xj8D0xmMxKCZ7D7VZxTSmCGojWMDYe7x7f+3GVPtTnkiK7ZjLqBAFlUW3PgOuMxmGoATqM5rzUpVST9rOg1CSWNWN+txvgr+1ObpKXWeK+r+7x24eGnGYzBoE3Ht3n0I0pNS6fhsaOK1v8uCf/UDPvvUP/QQ/9uPcZgQmf//Z"
       bio: "I am a Software Developer"
+
+  login:
+    required:
+      - email
+      - password
+    properties:
+      email:
+        type: string
+      password:
+        type: string
+    example:
+      email: "rohit@mailinator.com"
+      password: "Rohit@5053"
